# Projeto2_CD

./: .gitignore  README.md  abrir_interface.py  banco_de_dados_animes_limpo.csv  difusao_ver4.ipynb  interface.html  main.py  pyproject.toml  vae_app.py  vae_modelo copy.py  vae_modelo.py  vae_treinamento.py  vae_upsampler_ver2.py
